starting to work on authorpanel